# g

./: CMakeLists.txt
res/: fragment.txt  vertex.txt
src/: ExceptionClass.cpp  Screen.cpp  Utility.cpp  Window.cpp  main  main.cpp
src/Core/: Application.cpp  Application.h  Window.h
src/Graphics/: Cube.h  ShaderRenderer.cpp  Texture.cpp  Texture.h  Vertex.h
src/Render/: ShaderRender.cpp  ShaderRender.h
src/Renderer/: ShaderRenderer.h
src/Resource/: ResourceManager.cpp  ResourceManager.h
src/Utils/: ErrorHandler.h  FileUtils.h  Logger.cpp  Logger.h  PathUtils.cpp  PathUtils.h
src/res/shaders/: fragment.txt  vertex.txt
